Pol'ka Vladislav

--- a/Pol'ka Vladislav/index.html
+++ b/Pol'ka Vladislav/index.html
@@ -32,6 +32,7 @@
 			<a class="t12" href="border/index.html">#12</a>
 			<a class="t13" href="Rotate menu/index.html">#13</a>
 			<a class="t14" href="flash/index.html">#14</a>
+			<a class="t15" href="svg-btn/index.html">#15</a>
 		</div>
 
 		<hr class="palka">
@@ -49,6 +50,7 @@
 			<a class="p9" href="scroll/index.html">Scroll</a>
 			<a class="p10" href="checkbox/index.html">Checkbox</a>
 			<a class="p11" href="fade/index.html">Fade</a>
+			<a class="p12" href="footer-btn/index.html">Soc-btn</a>
 		</div>
 
 		<hr class="palka2">
