--- a/KapitalininMaxim/about.html
+++ b/KapitalininMaxim/about.html
@@ -21,6 +21,8 @@
 	<br>
 	<br>
 	<h1>Всем привет! Меня зовут Максим и я начинающий программист<h1>
+	<img src="img/me.jpg" width="150px" height="150px">
+	<h1><em>Меня зовут Максим Капиталинин. Я начинающий программист и студент Гуманитарного колледжа</em></h1>
 </center>
 </body>
 </html>
