--- a/Vladimir Frolov/vovanfroloff.html
+++ b/Vladimir Frolov/vovanfroloff.html
@@ -7,6 +7,9 @@
 	<style type="text/css">
 		@import url('https://fonts.googleapis.com/css?family=Amatic+SC');
 		@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
+    html {
+      scroll-behavior: smooth;
+    }
 		body {
 			font-family: 'Arctic', cursive;
     		line-height: 20px;
@@ -216,15 +219,14 @@
         	height: 300px;
         	text-align: center;
         	padding: 15px;
-        	border-radius: 10px;
-        	color: #6C6960;
+        	color: #fff;
         	position: absolute;
         	top: 0;
         	right: 0;
         	bottom: 0;
         	left: 0;
         	margin: auto;
-        	background: #fff;
+        	background: #292929;
       	}
       	#zatemnenie:target {display: block;}
       	.close {
@@ -423,11 +425,30 @@
       stroke: #4dc247;
     }
     .data {
-      position: absolute;
-      top: 5px;
-      left: 85px;
-      font-size: 15px;
+      position: relative;
+      top: 30%;
+      font-size: 20px;
     }
+    #timedisplay {
+      position: relative;
+      top: 28%;
+      font-size: 20px;
+    }
+    .gotopbtn {
+      position: fixed;
+      width: 35px;
+      height: 35px;
+      background: #4dc247;
+      bottom: 40px;
+      left: 50px;
+      text-decoration: none;
+      text-align: center;
+      line-height: 35px;
+      color: #fff;
+      font-size: 22px;
+      box-shadow: 0px 0px 10px #4dc247;
+    }
+    .gotopbtn:hover {background: #292929; color: #fff; box-shadow: none; border-radius: 0;}
 	</style>
 </head>
 <body>
@@ -494,7 +515,7 @@
  			<tr>
  				<td><a href="slider1.html"><div class="btn"><i class="fa fa-picture-o" aria-hidden="true"></i></div></a></td>
  				<td><a href="slider_3.html"><div class="btn"><i class="fa fa-picture-o" aria-hidden="true"></i></div></a></td>
- 				<td><a class="btn" href="#zatemnenie"><i class="fa fa-check-square" aria-hidden="true"></i></a></td>
+ 				<td><a class="btn" href="#zatemnenie"><i class="fa fa-calendar" aria-hidden="true"></i></a></td>
  			</tr>
  			<tr>
  				<td><a href="kalkulator.html"><div class="btn"><i class="fa fa-calculator" aria-hidden="true"></i></div></a></td>
@@ -566,8 +587,39 @@
 
  <div id="zatemnenie">
       <div id="okno">
-        <h1 class="txt1">Тольятти<br> Сегодня +10°C <br><i class="fa fa-thermometer-three-quarters" aria-hidden="true"></i></h1>
-        <a href="#" class="close"><i class="fa fa-times" aria-hidden="true"></i></a>
+        <p class="data" style="text-align: center;">
+          <script language="javascript" type="text/javascript">
+            var d = new Date();
+
+            var day=new Array("Воскресенье","Понедельник","Вторник",
+            "Среда","Четверг","Пятница","Суббота");
+
+            var month=new Array("января","февраля","марта","апреля","мая","июня",
+            "июля","августа","сентября","октября","ноября","декабря");
+
+            document.write(day[d.getDay()]+" " +d.getDate()+ " " + month[d.getMonth()]
+            + " " + d.getFullYear() + " г.");
+          </script>
+        </p>
+
+          <script type="text/javascript">
+            function getDate()
+            {
+              var date = new Date();
+              var hours = date.getHours();
+              var minutes = date.getMinutes();
+              var seconds = date.getSeconds();
+    //По надобности условие ниже повторить с minutes и hours
+              if(seconds < 10)
+              {
+                  seconds = '0' + seconds;
+              }
+              document.getElementById('timedisplay').innerHTML = hours + ':' + minutes + ':' + seconds;
+            }
+            setInterval(getDate, 0);
+          </script>
+          <div id="timedisplay"></div>
+          <a href="#" class="close1"><i class="fa fa-times" aria-hidden="true"></i></a>
       </div>
     </div>
 
@@ -577,19 +629,7 @@
         <a href="#" class="close1"><i class="fa fa-times" aria-hidden="true"></i></a>
       </div>
     </div>
-    <p class="data" style="text-align: center;">
-      <script language="javascript" type="text/javascript">
-        var d = new Date();
 
-        var day=new Array("Воскресенье","Понедельник","Вторник",
-        "Среда","Четверг","Пятница","Суббота");
-
-        var month=new Array("января","февраля","марта","апреля","мая","июня",
-        "июля","августа","сентября","октября","ноября","декабря");
-
-        document.write(day[d.getDay()]+" " +d.getDate()+ " " + month[d.getMonth()]
-        + " " + d.getFullYear() + " г.");
-      </script>
-    </p>
+    <a href="#" class="gotopbtn"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
 </body>
 </html>
