--- a/Daniil Dorofeev/index.html
+++ b/Daniil Dorofeev/index.html
@@ -36,6 +36,9 @@
 					<div class="work"><a href="feature4/index.html">Фича #4</a></div>
 					<div class="work"><a href="feature5/index.html">Фича #5</a></div>
 					<div class="work"><a href="feature6/index.html">Фича #6</a></div>
+					<div class="work"><a href="feature7/index.html">Фича #7</a></div>
+					<div class="work"><a href="feature8/index.html">Фича #8</a></div>
+					<div class="work"><a href="feature9/index.html">Фича #9</a></div>
 					<div class="work"><a href="https://topgroupproject.xyz">TopGroupProject</a></div>
 					<div class="work"><a href="https://ezgame.su">EzGame</a></div>
 				</div>
