--- a/Daniil Dorofeev/index.html
+++ b/Daniil Dorofeev/index.html
@@ -97,6 +97,7 @@
 			</div>
 		</footer>
 	</div>
+	<a href="#"><i class="far fa-arrow-alt-circle-up go-up"></i></a>
 	<script src="js/script.js"></script>
 </body>
 </html>
