--- a/Baidullin Ruslan/1.html
+++ b/Baidullin Ruslan/1.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
   <title>N.W.A</title>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" type="text/css" href="https://allfont.ru/allfont=css?fonts=open-sans">
 </head>
-<body background="машина.jpg">
+<body>
 <h1 style="position: relative;text-align:center;">
 <font color="MediumSpringGreen">
 Добро пожаловать!</font></h1>
@@ -17,25 +16,20 @@
 <center>
 <img src="tyler.jpg" width="200" height="200" title="Руслан">
 </center>
-<div id="content">
-  <ul id="nav">
-    <li>
-      <a href="">Фичи</a>
-      <ul>
-        <li><a href="Фича1/Кнопка.html">1$</a></li>
-        <li><a href="Фича2/Карточка.html">2$</a></li>
-      </ul>
-    </li>
-  </ul>
-      <ul id="nav">
-    <li>
-      <a href="">Разные работы</a>
-      <ul>
-        <li><a href="Руслан/Слайдер.html">1$</a></li>
-        <li><a href="Видео/Работа.html">2$</a></li>
-      </ul>
-    </li>
-  </ul>
+<div class="side">
+	<ul class="menu">
+		<li class="menu__list"><a href="#">Фичи</a>
+			<ul class="menu__drop">
+			<li><a href="Фича1/Кнопка.html">1#</a></li>
+			<li><a href="Фича2/Карточка.html">2#</a></li>
+		</ul>
+		</li>
+		<li class="menu__list"><a href="#">Работы</a>
+			<ul class="menu__drop">
+			<li><a href="Руслан/Слайдер.html">1#</a></li>
+			<li><a href="Видео/Работа.html">2#</a></li>
+		</ul>
+	</li>
 </div>
 </body>
 </html>
