--- a/Churbanov/index.html
+++ b/Churbanov/index.html
@@ -1,25 +1,46 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <title>Чурбанов Артём</title>
-        <script>
-    //курлык
-        </script>
-    </head>
-    <body>
-        <section id="Resume">
-            <h1>Резюме</h1>
-            <hr>
-            <h3>Меня зовут Артём Чурбанов.<br>Жизнь - тлен.<br>А я сделал несколько фич.<br>Все они - в ссылках ниже</h3>
-            <section class="link">
-            <ul>
-             <li> <a href="https://codepen.io/Klanndi/pen/vYBjPQo">2 фича</a></li>
-                <li><a href="https://codepen.io/Klanndi/pen/vYBaQzQ">4 фича</a></li>
-                <li><a href="https://codepen.io/Klanndi/pen/vYBavyq">5 фича</a></li>
-                <li><a href="https://codepen.io/Klanndi/pen/eYOjxam">6 фича (в процессе)</a></li>
-            </ul>
-            </section>
-        </section>
-    </body>
+<head>
+	<title>Чурбанов Артём</title>
+	<style>
+		@import url(css/style.css);
+		/*
+		Пока что не готово. Не знаю, как закинуть футер вниз. Он не хочет туда идти. Противный какой XD
+		Ну ладно. Всё равно.
+
+
+
+
+
+
+
+
+
+
+		*/
+	</style>
+</head>
+<body>
+<div class="section">
+	<img class="img" src="img/avatar.png" alt="Здесь должна быть ава"><p>
+	Меня зовут Артём Чурбанов. Я - начинающий программист. Частично знаю HTML, CSS, JavaScript. Изучаю движки Unity и собираюсь изучить также Unreal Engine.</p>
+	Жизнь - тлен. А я сделал несколько фич. Все они - в ссылках ниже
+</div>
+<div class="main">
+	<div class="features">
+		<div class="button">
+			1
+		</div>
+	</div>
+	<div class="lines"></div>
+	<div class="other"></div>
+	<div class="done"></div>
+	<div class="WIP"></div>
+	<div class="footer">
+		<div class="contacts">
+			
+		</div>
+	</div>
+</div>
+</body>
 </html>
