--- a/Vladimir Frolov/vovanfroloff.html
+++ b/Vladimir Frolov/vovanfroloff.html
@@ -4,6 +4,7 @@
 	<link rel="shortcut icon" href="froloff.png" type="image/x-icon">
 	<meta charset="utf-8">
 	<title>Фролов|Оффициальная страница</title>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	<style type="text/css">
 		@import url('https://fonts.googleapis.com/css?family=Amatic+SC');
 		@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
@@ -228,7 +229,7 @@
         	margin: auto;
         	background: #292929;
       	}
-      	#zatemnenie:target {display: block;}
+      	#zatemnenie:target {display: block; }
       	.close {
       		position: absolute;
       		top: 1px;
@@ -449,9 +450,75 @@
       box-shadow: 0px 0px 10px #4dc247;
     }
     .gotopbtn:hover {background: #292929; color: #fff; box-shadow: none; border-radius: 0;}
+
+    #loading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #292929;
+      width: 100%;
+      z-index: 10000;
+    }
+    .obj:nth-child(2) {
+      animation-delay: 0.1s;
+    }
+    .obj:nth-child(3) {
+      animation-delay: 0.2s;
+    }
+    .obj:nth-child(4) {
+      animation-delay: 0.3s;
+    }
+    .obj:nth-child(5) {
+      animation-delay: 0.4s;
+    }
+    .obj:nth-child(6) {
+      animation-delay: 0.5s;
+    }
+    .obj:nth-child(7) {
+      animation-delay: 0.6s;
+    }
+    .obj:nth-child(8) {
+      animation-delay: 0.7s;
+    }
+    .obj {
+      width: 6px;
+      height: 40px;
+      background: #4dc247;
+      margin: 0 3px;
+      border-radius: 10px;
+      animation: loading 0.8s infinite;
+      box-shadow: 0px 0px 10px #4dc247;
+    }
+    @keyframes loading {
+      0% {
+        height: 0;
+      }
+      50%{
+        height: 40px;
+      }
+      100%{
+        height: 0;
+      }
+    }
 	</style>
 </head>
 <body>
+  <div id="loading">
+    <div class="obj"></div>
+    <div class="obj"></div>
+    <div class="obj"></div>
+    <div class="obj"></div>
+    <div class="obj"></div>
+    <div class="obj"></div>
+    <div class="obj"></div>
+    <div class="obj"></div>
+  </div>
+
  <div class="fon">
   <a href="#zatemnenie1"><i class="fa fa-cog" aria-hidden="true"></i></a>
  	<h1 class="txt">Владимир Фролов</h1>
@@ -631,5 +698,9 @@
     </div>
 
     <a href="#" class="gotopbtn"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
+    
+    <script>
+      $('#loading').find('i').fadeOut().end().delay(800).fadeOut('slow');
+    </script>
 </body>
 </html>
