Pol'ka Vladislav

--- a/Pol'ka Vladislav/index.html
+++ b/Pol'ka Vladislav/index.html
@@ -33,6 +33,9 @@
 			<a class="t13" href="Rotate menu/index.html">#13</a>
 			<a class="t14" href="flash/index.html">#14</a>
 			<a class="t15" href="svg-btn/index.html">#15</a>
+			<a class="t16" href="neon-btn/index.html">#16</a>
+			<a class="t17" href="span-btn/index.html">#17</a>
+			<a class="t18" href="blur/index.html">#18</a>
 		</div>
 
 		<hr class="palka">
