--- a/Kirill Rusanov/index.html
+++ b/Kirill Rusanov/index.html
@@ -28,7 +28,7 @@
                             <figure> <img src="images/profile_img.png" alt="Avatar"> </figure>
                             <h1>Русанов Кирилл</h1>
                             <p> Я начинающий C# программист, студент православного <a href="http://gumcollege.ru/">гуманитарного колледжа г. Тольятти.</a>
-                                <br> Живу в Тольятти. Разрабатываю программы на C#. Знаю английский на уровне B1-B2, умею читать английский документаций. C удовольствием работаю в команде. </p>
+                                <br> Живу в Тольятти. Разрабатываю программы на C#. Знаю английский язык на среднем уровне. C удовольствием работаю в команде. </p>
                         </div>
                     </div>
                     <ul class="fh5co-social">
@@ -64,7 +64,7 @@
                                 <div class="work"><a href="Css18/index.html">Фича 18</a></div>
                                 <div class="work"><a href="Slider/index.html">Слайдер</a></div>
                                 <div class="work"><a href="modal/index.html">Модальное окно</a></div>
-                                <div class="work"><a href="js/Convertor%20console.exe">Конвертор валют</a></div>
+                                <div class="work"><a href="js/Convertor%20console.exe">Конвертор валют V.02</a></div>
                             </div>
                         </div>
                     </div>
@@ -77,19 +77,16 @@
                             <p>Навыки работы с языками</p>
                         </div>
                         <div class="col-md-4 col-sm-6 col-xs-12 text-center">
-                            <div class="chart" data-percent="85"><span><strong>HTML5</strong></span></div>
+                            <div class="chart" data-percent="70"><span><strong>HTML5</strong></span></div>
                         </div>
                         <div class="col-md-4 col-sm-6 col-xs-12 text-center">
-                            <div class="chart" data-percent="75"><span><strong>CSS3</strong></span></div>
+                            <div class="chart" data-percent="55"><span><strong>CSS3</strong></span></div>
                         </div>
                         <div class="col-md-4 col-sm-6 col-xs-12 text-center">
-                            <div class="chart" data-percent="50"><span><strong>JavaScript</strong></span></div>
+                            <div class="chart" data-percent="25"><span><strong>JavaScript</strong></span></div>
                         </div>
                         <div class="col-md-4 col-sm-6 col-xs-12 text-center">
-                            <div class="chart" data-percent="35"><span><strong>C#</strong></span></div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12 text-center">
-                            <div class="chart" data-percent="25"><span><strong>Java</strong></span></div>
+                            <div class="chart" data-percent="15"><span><strong>C#</strong></span></div>
                         </div>
                     </div>
                 </div>
