--- a/Churbanov/index.html
+++ b/Churbanov/index.html
@@ -5,9 +5,9 @@
 	<style>
 		@import url(css/style.css);
 		/*
-		Пока что не готово. Не знаю, как закинуть футер вниз. Он не хочет туда идти. Противный какой XD
+		23.10. Пока что не готово. Не знаю, как закинуть футер вниз. Он не хочет туда идти. Противный какой XD
 		Ну ладно. Всё равно.
-
+		24.10. Добавил коробку для мэйна. Футер не прижимается. До сих пор.
 
 
 
@@ -21,6 +21,7 @@
 	</style>
 </head>
 <body>
+	<div class="content">
 <div class="section">
 	<img class="img" src="img/avatar.png" alt="Здесь должна быть ава"><p>
 	Меня зовут Артём Чурбанов. Я - начинающий программист. Частично знаю HTML, CSS, JavaScript. Изучаю движки Unity и собираюсь изучить также Unreal Engine.</p>
@@ -36,11 +37,12 @@
 	<div class="other"></div>
 	<div class="done"></div>
 	<div class="WIP"></div>
+</div>
+</div>
 	<div class="footer">
 		<div class="contacts">
 			
 		</div>
 	</div>
-</div>
 </body>
 </html>
