--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="widget">
       <h3 class="widget-title">Работы студентов группы Пкс 21</h3>
       <ul class="widget-list">
+        <li><a href="./Babaleu Aleksandr/index.html">Бабалеу Александр</a></li>
         <li><a href="">Байдуллин Руслан</a></li>
         <li><a href="./Bogdan Bochkov/index.html">Бочков Богдан</a></li>
         <li><a href="./Daniil Dorofeev/index.html">Дорофеев Даниил</a></li>
