--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Пкс 21</title> <!-- Задаем заголовок документа -->
     <link rel="stylesheet" type="text/css" href="style.css"> <!-- Подключаем внешнюю таблицу стилей -->
     <script src="script.js"></script> <!-- Подключаем сценарии -->
+    <link rel="shortcut icon" href="img/icoon.png" type="image/jpg">
 </head>
 <body> <!-- Основная часть документа -->
 
