Pol'ka Vladislav

--- a/Pol'ka Vladislav/index.html
+++ b/Pol'ka Vladislav/index.html
@@ -55,6 +55,7 @@
 			<a class="p11" href="Practice/fade/index.html">Fade</a>
 			<a class="p12" href="Practice/footer-btn/index.html">Soc-btn</a>
 			<a class="p13" href="Practice/simple hover/index.html">Si-btn</a>
+			<a class="p14" href="Practice/rain/index.html">Rain</a>
 		</div>
 
 		<hr class="palka2">
