--- a/Vladimir Frolov/vovanfroloff.html
+++ b/Vladimir Frolov/vovanfroloff.html
@@ -587,6 +587,7 @@
  			<tr>
  				<td><a href="kalkulator.html"><div class="btn"><i class="fa fa-calculator" aria-hidden="true"></i></div></a></td>
  				<td><a href="video.html"><div class="btn"><i class="fa fa-video-camera" aria-hidden="true"></i></div></a></td>
+        <td><a href="snake.html"><div class="btn"><i class="fa fa-gamepad" aria-hidden="true"></i></div></a></td>
  			</tr>
  			<tr>
  				<td><a href="login.html"><div class="btn"><i class="fa fa-sign-out" aria-hidden="true"></i></div></a></td>
