Pol'ka Vladislav

--- a/Pol'ka Vladislav/index.html
+++ b/Pol'ka Vladislav/index.html
@@ -67,6 +67,7 @@
 			<a class="hm3" href="Homework/project/index.html">03.10.19</a>
 			<a class="hm4" href="Homework/window/index.html">07.10.19</a>
 			<a class="hm5" href="Homework/Adap verst/index.html">21.10.19</a>
+			<a class="hm6" href="Homework/Verstka/src/index.html">24.10.19</a>
 		</div>
 
 		<footer>
