--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><a href="./Dima Turin/index.html">Тюрин Дмитрий</a></li>
         <li><a href="">Хоршев Иван</a></li>
         <li><a href="./Churbanov/index.html">Чурбанов Артем</a></li>
-        <li><a href="">Шестаков Андрей</a></li>
+        <li><a href="./Shestakov/index.html">Шестаков Андрей</a></li>
         <li><a href="">Сапожников Павел</a></li>
         <li><a href="./Vladimir Frolov/vovanfroloff.html">Фролов Владимир</a></li>
         <li><a href="./Konstantin Bukin/index.html">Букин Константин</a></li>
