--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<<<<<<< HEAD
-﻿<!DOCTYPE html> <!-- Объявление формата документа -->
-=======
+<!DOCTYPE html> <!-- Объявление формата документа -->
 ﻿<DOCTYPE html> <!-- Объявление формата документа -->
->>>>>>> c719efff10cdfd07bba741ecc4543836dff6cf05
 <html>
 	<head> <!-- Техническая информация о документе -->
 		<meta charset="UTF-8"> <!-- Определяем кодировку символов документа -->
@@ -46,49 +43,4 @@
   			</ul>
 		</div>
 	</body>
-<head> <!-- Техническая информация о документе -->
-    <meta charset="UTF-8"> <!-- Определяем кодировку символов документа -->
-    <title>Пкс 21</title> <!-- Задаем заголовок документа -->
-    <link rel="stylesheet" type="text/css" href="style.css"> <!-- Подключаем внешнюю таблицу стилей -->
-    <script src="script.js"></script> <!-- Подключаем сценарии -->
-    <link rel="shortcut icon" href="img/icoon.png" type="image/jpg">
-</head>
-<body> <!-- Основная часть документа -->
-
-    <div class="widget">
-      <h3 class="widget-title">Работы студентов группы Пкс 21</h3>
-      <ul class="widget-list">
-        <li><a href="./Babaleu Aleksandr/index.html">Бабалеу Александр!</a></li>
-        <li><a href="">Байдуллин Руслан</a></li>
-        <li><a href="./Bogdan Bochkov/index.html">Бочков Богдан</a></li>
-        <li><a href="./Daniil Dorofeev/index.html">Дорофеев Даниил</a></li>
-        <li><a href="">Ермолин Илья</a></li>
-        <li><a href="./KapitalininMaxim/index.html">Капиталинин Максим</a></li>
-        <li><a href="Klitvin Aleksandr/сайт/index.html">Клитвин Александр</a></li>
-        <li><a href="">Малинин Сергей</a></li>
-        <li><a href="./Mamsina Arina/site.html">Мамсина Арина</a></li>
-        <li><a href="./Mitrichev Danila/index.html">Митричев Данила</a></li>
-        <li><a href="./MokhnatkinDanila/Sayt.html">Мохнаткин Данил</a></li>
-        <li><a href="./Pirogov_Aleksey/Aleksey Pirogov.html">Пирогов Алексей</a></li>
-        <li><a href="Pol'ka Vladislav/index.html">Полька Владислав</a></li>
-        <li><a href="./Kirill Rusanov/index.html">Русанов Кирилл</a></li>
-        <li><a href="Bogdan Ryakin/index.html">Рякин Богдан</a></li>
-        <li><a href="">Скорина Анастасия</a></li>
-        <li><a href="./Dima Turin/index.html">Тюрин Дмитрий</a></li>
-        <li><a href="">Хоршев Иван</a></li>
-        <li><a href="./Churbanov/index.html">Чурбанов Артем</a></li>
-        <li><a href="./Shestakov/Shestakov.html">Шестаков Андрей</a></li>
-        <li><a href="">Сапожников Павел</a></li>
-        <li><a href="./Vladimir Frolov/vovanfroloff.html">Фролов Владимир</a></li>
-        <li><a href="./Konstantin Bukin/index.html">Букин Константин</a></li>
-        <li><a href="./Vitaliy Isaev/index.html">Исаев Виталий</a></li>
-        <li><a href="">Радаев Данил</a></li>
-        <li><a href=""></a></li>
-
-        <li><a href="https://napastyuk.github.io/">ИЛЬЯ НАПАСТЮК</a></li>
-        <li><a href="./task.html">Задания????!!!!</a></li>
-    </ul>
-</div>
-</body>
->>>>>>> 4df06846168b3f3478fc631b4fb6f59e0ae804c3
 </html>
