Pol'ka Vladislav

--- a/Pol'ka Vladislav/index.html
+++ b/Pol'ka Vladislav/index.html
@@ -56,6 +56,7 @@
 			<a class="p12" href="Practice/footer-btn/index.html">Soc-btn</a>
 			<a class="p13" href="Practice/simple hover/index.html">Si-btn</a>
 			<a class="p14" href="Practice/rain/index.html">Rain</a>
+			<a class="p15" href="Practice/Form/index.html">Form</a>
 		</div>
 
 		<hr class="palka2">
