--- a/Klitvin Aleksandr/сайт/index.html
+++ b/Klitvin Aleksandr/сайт/index.html
@@ -5,6 +5,10 @@
   <title>ds0</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="firework/p5.min.js"></script>
+  <script src="firework/particles.js"></script>
+  <script src="firework/fireworks.js"></script>
+  <script src="firework/script.js"></script>
 </head>
 <body>
   <div class="wrapper">
