--- a/Mitrichev Danila/index.html
+++ b/Mitrichev Danila/index.html
@@ -6,6 +6,10 @@
 	<link rel="stylesheet" href="styles/indexStyle.css">
 	<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 	<script src="https://kit.fontawesome.com/a4f84400aa.js" crossorigin="anonymous"></script>
+	<script src="scripts/firework/p5.min.js"></script>
+	<script src="scripts/firework/particles.js"></script>
+	<script src="scripts/firework/fireworks.js"></script>
+	<script src="scripts/firework/script.js"></script>
 	<script src="scripts/script.js"></script>
 	<script src="scripts/scrollScript.js"></script>
 	<script></script>
