--- a/Vitaliy Isaev/index.html
+++ b/Vitaliy Isaev/index.html
@@ -3,14 +3,14 @@
 <head>
  <title>Виталий Исаев резюме</title>
 </head>
-<body link="#fff" vlink="#fff" bgcolor="#7b1fa2" align="center" >
-<font color="white" face= "Arial">
+<body link="#0000FF" vlink="#0000FF" bgcolor="#EFFF00" align="center" >
+<font color="#0000FF" face= "Arial">
 <H2>Резюме</H2>
 <hr> <b> Виталий Исаев </b>
 <br>Я начинающий программист и я сделал несколько работ
 <br> <b><ul align="left"> 
-<li><a href="">1 работа</a></li>
-<li><a href="">2 работа</a></li>
+<li><a href="work1/index.html">1 работа</a></li>
+<li><a href="work2/index.html">2 работа</a></li>
 <li><a href="">3 работа</a></li>
 <li><a href="">4 работа</a></li>
 <li><a href="">5 работа</a></li>
