--- a/Vitaliy Isaev/index.html
+++ b/Vitaliy Isaev/index.html
@@ -1,23 +1,78 @@
-﻿<!DOCTYPE html>
 <html>
-<head>
- <title>Виталий Исаев резюме</title>
-</head>
-<body link="#0000FF" vlink="#0000FF" bgcolor="#EFFF00" align="center" >
-<font color="#0000FF" face= "Arial">
-<H2>Резюме</H2>
-<hr> <b> Виталий Исаев </b>
-<br>Я начинающий программист и я сделал несколько работ
-<br> <b><ul align="left"> 
-<li><a href="work1/index.html">1 работа</a></li>
-<li><a href="work2/index.html">2 работа</a></li>
-<li><a href="">3 работа</a></li>
-<li><a href="">4 работа</a></li>
-<li><a href="">5 работа</a></li>
-<li><a href="">6 работа</a></li>
-<li><a href="">7 работа</a></li>
-<li><a href="">8 работа</a></li>
-</ul></b>
-</font>
-</body>
+  <head>
+    <title>Profile</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/75aff647c4.js" crossorigin="anonymous"></script>
+  </head>
+  <body onload="menuInit();">
+    <div class="container">
+      <div class="profile">
+        <div class="profile-photo"></div>
+        <div class="profile-info">
+          <h2 class="heading heading-light">
+            Profile
+          </h2>
+          <p class="profile-text">Привет! Я студент <a href="http://gumcollege.ru/">православного гуманитарного колледжа имени Святителя Алексия Митрополита Московского</a></p>
+          <div class="contacts">
+            <div class="contacts-item">
+              <h3 class="contacts-title">
+                <i class="fas fa-phone"></i>
+                Phone
+              </h3>
+              <a href="tel:+79171493953" class="contacts-number">+7(917) 149-39-53</a>
+            </div>
+            <div class="contacts-item">
+              <h3 class="contacts-title">
+                <i class="far fa-envelope"></i>
+                Email
+              </h3>
+              <a href="mailto:VitasDit@yandex.ru" class="contacts-text">VitasDit@yandex.ru</a>
+            </div>
+            <div class="contacts-item">
+              <h3 class="contacts-title">
+                <i class="fab fa-discord"></i>
+                Discord
+              </h3>
+              <div class="contacts-text">
+                VitasDit#6341
+              </div>
+            </div>
+            <div class="contacts-item">
+              <h3 class="contacts-title">
+                <i class="fab fa-vk"></i>
+                Vk
+              </h3>
+              <a href="https://vk.com/id155282503" class="contacts-text">Виталий Исаев</a>
+            </div>
+          </div>
+          </div>
+          <ul id="main-menu">
+            <li id="dropdown-item">
+              <i class="fas fa-pen"></i>Мои работы
+            </li>
+            <ul id="submenu" class="hide-submenu">
+              <a href="work1/index.html"><li>3D карточка</li></a>
+              <a href="work1/index.html"><li>3D карточка</li></a>
+              <a href="work1/index.html"><li>3D карточка</li></a>
+              <a href="work1/index.html"><li>3D карточка</li></a>
+              <a href="work1/index.html"><li>3D карточка</li></a>
+              <a href="work1/index.html"><li>3D карточка</li></a>
+              <a href="work1/index.html"><li>3D карточка</li></a>
+              <a href="work1/index.html"><li>3D карточка</li></a>
+              <a href="work1/index.html"><li>3D карточка</li></a>
+              <a href="work2/index.html"><li>Трансформации CSS</li></a>
+              <a href="work2/index.html"><li>Трансформации CSS</li></a>
+              <a href="work2/index.html"><li>Трансформации CSS</li></a>
+              <a href="work2/index.html"><li>Трансформации CSS</li></a>
+              <a href="work2/index.html"><li>Трансформации CSS</li></a>
+              <a href="work2/index.html"><li>Трансформации CSS</li></a>
+              <a href="work2/index.html"><li>Трансформации CSS</li></a>
+              <a href="work2/index.html"><li>Трансформации CSS</li></a>
+              <a href="work2/index.html"><li>Трансформации CSS</li></a>
+            </ul>
+          </ul>
+      </div>
+    </div>
+  </body> 
 </html>
