--- a/Vitaliy Isaev/index.html
+++ b/Vitaliy Isaev/index.html
@@ -53,8 +53,8 @@
             </li>
             <ul id="submenu" class="hide-submenu">
               <a href="work1/index.html"><li>3D карточка</li></a>
-              <a href="work1/index.html"><li>3D карточка</li></a>
-              <a href="work1/index.html"><li>3D карточка</li></a>
+              <a href="work2/index.html"><li>Трансформации CSS</li></a>
+              <a href="work3/index.html"><li> 3D карточки портфолио на сайт</li></a>
               <a href="work1/index.html"><li>3D карточка</li></a>
               <a href="work1/index.html"><li>3D карточка</li></a>
               <a href="work1/index.html"><li>3D карточка</li></a>
