--- a/Mitrichev Danila/index.html
+++ b/Mitrichev Danila/index.html
@@ -40,12 +40,12 @@
 		</div>
 
 		<!-- MINIMAP/SCROLL -->
-		<div class="left_container">
+<!-- 		<div class="left_container">
 			<h2 class="scroll_nav">Навигация по сайту</h2>
 			<hr>
 			<input onclick="scrollTo(scrollToSkill)" type="button" class="skill_scroll" value="Навыки"></input><br>
 			<input onclick="scrollTo(scrollToCompleteWork)" type="button" class="complete-work_scroll" value="Выполненный работы"></input>
-		</div>
+		</div> -->
 
 		<!-- Шапка -->
 		<header>
